# legal-knowledge-modus-operandis

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
legal_rag/: __init__.py  __main__.py  advisor.py  chunker.py  cli.py  embed.py  graph.py  index.py  mcp_server.py  paths.py  search.py  sources.py
markdown/: codigo-civil-2026.md  codigo-de-familia.md  codigo-penal-2026.md  codigo-procesal-civil-2026.md  codigo-procesal-de-familia-2026.md  codigo-procesal-penal-2026.md  examen-incorporacion-caacr-2026.md  temario-derecho-administrativo-2025.md  temario-derecho-civil-2025.md  temario-derecho-comercial-2025.md  temario-derecho-constitucional-2025.md  temario-derecho-de-familia-2025.md  temario-derecho-laboral-2025.md  temario-derecho-penal-2025.md
scripts/: convert_pdfs.py  diag_articles.py  diag_civil.py  probe_pdfs.py  sample_text.py  verify_fidelity.py
tests/: test_legal.py
